--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -7,5 +7,14 @@
 		<title>Register page</title>
 	</head>
 
+	<body>
+		<form method="POST">
+			{% csrf_token %}
+			{{form}}
+			
+			<input type="submit" value="Register">
+		</form>
+	
+	</body>
 
 </html>
