--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -26,10 +26,13 @@
 			<input type="hidden" name="next" value="{{next}}">
 			
 		</form>
-		{%if form.errors %}
-			<p>Username and password not match</p>
+		
+		{% if form.errors %}
+		
+			<p>Incorrect username or password</p>
+			
 		{% endif %}
-
+		
 		<a href={% url "register" %}>Register</a>
 	</body>
 
