--- a/account/templates/registration/reg_teacher.html
+++ b/account/templates/registration/reg_teacher.html
@@ -4,7 +4,7 @@
 <html>
 
 	<head>
-		<title>Register as student</title>
+		<title>Register as teacher</title>
 	</head>
 
 	<body>
@@ -16,7 +16,7 @@
 			<input type="submit" value="Register">
 		</form>
 		<a href={% url 'login' %}>login</a>
-		<a href={% url 'reg_teacher' %}>Register as teacher</a>
+		<a href={% url 'register' %}>Register as student</a>
 	</body>
 
 </html>
