--- a/templates/template.html
+++ b/templates/template.html
@@ -15,7 +15,12 @@
 	
 		{% block account %}
 			{% if user.is_authenticated %}
-				Hello,&nbsp;{{user.get_username}}&nbsp;
+				Hello,
+				&nbsp;
+				<a href="{% url 'profile' %}">
+				{{user.get_username}}
+				</a>
+				&nbsp;
 				<a href={% url "logout" %}>Logout</a>
 			{% else %}
 				<a href="{% url 'login' %}?next={{request.path}}">Login</a>
