--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="{% url 'home' %}">个人博客网站</a>	
+				<a class="navbar-brand" href="{% url 'index' %}">个人博客网站</a>	
 				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -25,8 +25,7 @@
 			</div>
 			<div id="navbar-collapse" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="{% block nav_home_active %}{% endblock %}"><a href="{% url 'home' %}">首页</a></li>
-					<li class="{% block nav_blog_active %}{% endblock %}"><a href="{% url 'blog_list' %}">博客</a></li>
+					<li class="{% block nav_home_active %}{% endblock %}"><a href="{% url 'index' %}">首页</a></li>
 				</ul>	
 
 		    	<ul class="nav navbar-nav navbar-right">
