--- a/user_profile/templates/profile/teacher.html
+++ b/user_profile/templates/profile/teacher.html
@@ -15,10 +15,10 @@
 
 	{% if courses %}
 		<table>
-			<th>
-				<td>name</td>
-				<td>count</td>
-			</th>
+			<tr>
+				<th>name</th>
+				<th>count</th>
+			</tr>
 			
 			{% for course in courses %}
 				<tr>
