--- a/user_profile/templates/profile/student.html
+++ b/user_profile/templates/profile/student.html
@@ -16,11 +16,11 @@
 	{% if courses %}
 
 		<table>
-			<th>
-				<td>name</td>
-				<td>teacher</td>
-				<td>description</td>
-			</th>
+			<tr>
+				<th>name</th>
+				<th>teacher</th>
+				<th>description</th>
+			</tr>
 			
 			{% for course in courses %}
 				<tr>
